src/test/deca/context/invalid/Objet/unknown_MethodCall.deca
// Description:
//    test de faire appel à une méthode inexistante 
//
// Resultats:
//  14:4: The method set does not belong to the class A
//
// Historique:
//    cree le 20/01/2022

class A   {}

{
    A a  ; 
    a.set() ;
}



